force-app/main/default/objects/Time_Sheet__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Time Sheets</relationshipLabel>
    <relationshipName>Time_Sheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>