force-app/main/default/objects/Time_Sheet__c/fields/Moneda__c.field-meta.xml
<CustomField>
    <fullName>Moneda__c</fullName>
    <inlineHelpText>Enter the hours for Monday</inlineHelpText>
    <label>Monday</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>