force-app/main/default/objects/Time_Sheet__c/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <label>Tuesday</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>