force-app/main/default/objects/Time_Sheet__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <label>Wednesday</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>